# ai-datacenter-modelling

./: .env.example  .gitignore  README.md  example_output.txt  pyproject.toml
data/assumptions/: base_assumptions.yaml  entity_universe.yaml  scenarios.yaml
notebooks/: 01_data_exploration.ipynb  02_scenario_walkthrough.ipynb
scripts/: _smoke.py  _verify.py
src/: cli.py  config.py
src/app/: streamlit_app.py
src/data_sources/: eia.py  fiscaldata_treasury.py  fred.py  manual_inputs.py  sec_edgar.py
src/model/: contagion_module.py  datacenter_project.py  financing_stack.py  hyperscaler_module.py  power_module.py  private_credit_module.py  scenarios.py  stress_metrics.py  treasury_module.py
src/utils/: logging.py  validation.py
tests/: test_private_credit.py  test_treasury_module.py
web/: README.md  app.jsx  charts.jsx  controls.jsx  engine.js  index.html  panels.jsx  styles.css
