[project]
name = "ai-datacenter-macro-model"
version = "0.1.0"
description = "v0 macro-financial stress model for the AI data-center buildout and its interaction with U.S. bonds, private credit, hyperscaler capex, power markets, and private-market liquidity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "omkmorendha", email = "omkmorendha@gmail.com" }]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.31",
    "plotly>=5.20",
    "matplotlib>=3.8",
    "streamlit>=1.33",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
ai-dc-model = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
